hack/e2e/manifests/barnacle/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: barnacle-e2e

resources:
  - configmap.yaml
  - deployment.yaml
  - service.yaml
  - ingress.yaml
